# scraper

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  main.go  scraper.go  ui.go
